Fix visibility and ordering of HostedAppButtonContaier override methods

This is a refactor follow up CL to https://chromium-review.googlesource.com/c/chromium/src/+/1248521
which changes the visibility HostedAppButtonContainer methods to match
the visibility of the super class methods they override.
In addition to this it alphabetises the inheritances and method
overrides.

This is a code style refactor CL with no changes in behaviour.

Bug: 876271
Change-Id: I619445937cd6f3fddbf4433cff4616913f3d0c20
Reviewed-on: https://chromium-review.googlesource.com/c/1250463
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598228}
Former-commit-id: ea3ab8f2be75c63470d49a36acc3e9fadc7ec5f4